tests/feature_tests/error_main4.c
// error: second parameter of 'main' must be like char**
int main(int a, char b) {}
